[project]
name = "memoriproxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "litellm[proxy]>=1.80.0",
    "memorisdk>=2.3.2",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
